first commit from local machine

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Albert Kabore\n",
+    "\n",
+    "Link to GitHub: https://github.com/albertokabore/python-ds-nb-\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -18,61 +20,131 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "1. Modify the Markdown cell above to put your name after \"Student Name:\"; you will be expected to do this in all assignments presented in this format for this class."
+    "#Import Dependencies \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Write code that divides any two numbers, stores the result in a variable, and prints the result with an appropriate label."
+    "Question 1. Modify the Markdown cell above to put your name after \"Student Name:\"; you will be expected to do this in all assignments presented in this format for this class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 2. Write code that divides any two numbers, stores the result in a variable, and prints the result with an appropriate label."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of dividing 10 by 2 is: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define two numbers\n",
+    "num1 = 10  # You can change this to any number\n",
+    "num2 = 2   # You can change this to any non-zero number\n",
+    "\n",
+    "# Perform division and store the result\n",
+    "result = num1 / num2\n",
+    "\n",
+    "# Print the result with a label\n",
+    "print(f\"The result of dividing {num1} by {num2} is: {result}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Using loops (and potentially conditionals), write Python code that prints the factorial of each integer from 1 through 10 (which you can store in a variable if you want). The factorial of an integer is the product of all of the integers of 1 through the number. Print the result with an appropriate label."
+    "Question 3. Using loops (and potentially conditionals), write Python code that prints the factorial of each integer from 1 through 10 (which you can store in a variable if you want). The factorial of an integer is the product of all of the integers of 1 through the number. Print the result with an appropriate label."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 1 is: 1\n",
+      "The factorial of 2 is: 2\n",
+      "The factorial of 3 is: 6\n",
+      "The factorial of 4 is: 24\n",
+      "The factorial of 5 is: 120\n",
+      "The factorial of 6 is: 720\n",
+      "The factorial of 7 is: 5040\n",
+      "The factorial of 8 is: 40320\n",
+      "The factorial of 9 is: 362880\n",
+      "The factorial of 10 is: 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    factorial = 1\n",
+    "    for j in range(1, i + 1):\n",
+    "        factorial *= j\n",
+    "    print(f\"The factorial of {i} is: {factorial}\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Write a python function that takes a single parameter and calculates and returns the average (mean) of the values in the parameter (which you may assume is iterable).  Show that your function works by printing the result of calling the function on the list in the cell below."
+    "Question 4. Write a python function that takes a single parameter and calculates and returns the average (mean) of the values in the parameter (which you may assume is iterable).  Show that your function works by printing the result of calling the function on the list in the cell below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of testlist is: 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "def calculate_mean(values):\n",
+    "    if len(values) == 0:\n",
+    "        return 0  # Handle empty list case\n",
+    "    return sum(values) / len(values)\n",
+    "\n",
+    "# Call the function and print the result\n",
+    "mean_value = calculate_mean(testlist)\n",
+    "print(f\"The average of testlist is: {mean_value}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Using your mean function above, write a function that calculates the variance of the list of numbers (see https://en.wikipedia.org/wiki/Variance for more information on the formula). In short:\n",
+    "Question 5. Using your mean function above, write a function that calculates the variance of the list of numbers (see https://en.wikipedia.org/wiki/Variance for more information on the formula). In short:\n",
     "* subtract the mean of the elements in the list from every element in the list; store these values in a new list\n",
     "* square every element in the new list and sum the elements together\n",
     "* divide the resulting number by N (where N is the length of the original list)\n",
@@ -82,13 +154,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variance of list1 is: 1.13973309\n",
+      "The variance of list2 is: 0.9257232841\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "# the variances of both lists should be relatively close to 1 (off by less than .15)\n",
+    "\n",
+    "def calculate_variance(values):\n",
+    "    # Calculate the mean using the previously defined function\n",
+    "    mean_value = calculate_mean(values)\n",
+    "    \n",
+    "    # Create a list of squared differences from the mean\n",
+    "    squared_diffs = [(x - mean_value) ** 2 for x in values]\n",
+    "    \n",
+    "    # Calculate the variance by summing the squared differences and dividing by the length of the list\n",
+    "    variance = sum(squared_diffs) / len(values)\n",
+    "    \n",
+    "    return variance\n",
+    "\n",
+    "\n",
+    "# Calculate and print the variances for list1 and list2\n",
+    "variance_list1 = calculate_variance(list1)\n",
+    "variance_list2 = calculate_variance(list2)\n",
+    "\n",
+    "print(f\"The variance of list1 is: {variance_list1}\")\n",
+    "print(f\"The variance of list2 is: {variance_list2}\")"
    ]
   },
   {
@@ -140,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
