--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Create a list with at least 15 elements in it. Use list slicing to print the following:\n",
+    "Question 6. Create a list with at least 15 elements in it. Use list slicing to print the following:\n",
     "* The first 5 elements of the list\n",
     "* The last 5 elements of the list\n",
     "* The list reversed (hint, show the entire list with a stride of -1)\n",
@@ -206,10 +206,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 elements: [1, 2, 3, 4, 5]\n",
+      "Last 5 elements: [11, 12, 13, 14, 15]\n",
+      "Reversed list: [15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Every second element: [1, 3, 5, 7, 9, 11, 13, 15]\n",
+      "Every third element: [1, 4, 7, 10, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample list with 15 elements\n",
+    "my_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
+    "\n",
+    "# The first 5 elements of the list\n",
+    "print(\"First 5 elements:\", my_list[:5])\n",
+    "\n",
+    "# The last 5 elements of the list\n",
+    "print(\"Last 5 elements:\", my_list[-5:])\n",
+    "\n",
+    "# The list reversed\n",
+    "print(\"Reversed list:\", my_list[::-1])\n",
+    "\n",
+    "# Every second element in the list\n",
+    "print(\"Every second element:\", my_list[::2])\n",
+    "\n",
+    "# Every third element in the list\n",
+    "print(\"Every third element:\", my_list[::3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,10 +257,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Data Analytics and Informatics', 'course_number': 'DAI 101', 'semester_term': 'Fall 2024', 'credit_hours': 3, 'learning_objectives': ['Understand foundational data analytics concepts', 'Apply data cleaning and preprocessing techniques', 'Analyze and visualize data using appropriate tools', 'Interpret data insights to inform decision-making', 'Develop data storytelling skills to communicate findings']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionary containing information about the class\n",
+    "course_info = {\n",
+    "    \"name\": \"Data Analytics and Informatics\",\n",
+    "    \"course_number\": \"DAI 101\",\n",
+    "    \"semester_term\": \"Fall 2024\",\n",
+    "    \"credit_hours\": 3,\n",
+    "    \"learning_objectives\": [\n",
+    "        \"Understand foundational data analytics concepts\",\n",
+    "        \"Apply data cleaning and preprocessing techniques\",\n",
+    "        \"Analyze and visualize data using appropriate tools\",\n",
+    "        \"Interpret data insights to inform decision-making\",\n",
+    "        \"Develop data storytelling skills to communicate findings\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Print the dictionary\n",
+    "print(course_info)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
