--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -257,30 +257,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Data Analytics and Informatics', 'course_number': 'DAI 101', 'semester_term': 'Fall 2024', 'credit_hours': 3, 'learning_objectives': ['Understand foundational data analytics concepts', 'Apply data cleaning and preprocessing techniques', 'Analyze and visualize data using appropriate tools', 'Interpret data insights to inform decision-making', 'Develop data storytelling skills to communicate findings']}\n"
+      "{'name': 'Web Mining & Applied Natural Language Processing (NLP)', 'course_number': '44-620 80/81', 'semester_term': 'Fall 2024 - Block 2', 'credit_hours': 3, 'learning_objectives': ['View hidden files and folders', 'View file extensions', 'Create a new GitHub project repository', 'Clone a project repository down to their machine', 'Open their project repository folder in VS Code', 'Manage a project virtual environment (create, activate, install dependencies)', 'Employ common project files (e.g. README.md, .gitignore, requirements.txt)', 'Create and execute new Python scripts', 'Create and execute new Jupyter notebooks using Python and Markdown', 'Use git pull and git add / commit / push to keep a project synchronized between their machine and GitHub repository']}\n"
      ]
     }
    ],
    "source": [
     "# Dictionary containing information about the class\n",
     "course_info = {\n",
-    "    \"name\": \"Data Analytics and Informatics\",\n",
-    "    \"course_number\": \"DAI 101\",\n",
-    "    \"semester_term\": \"Fall 2024\",\n",
+    "    \"name\": \"Web Mining & Applied Natural Language Processing (NLP)\",\n",
+    "    \"course_number\": \"44-620 80/81\",\n",
+    "    \"semester_term\": \"Fall 2024 - Block 2\",\n",
     "    \"credit_hours\": 3,\n",
     "    \"learning_objectives\": [\n",
-    "        \"Understand foundational data analytics concepts\",\n",
-    "        \"Apply data cleaning and preprocessing techniques\",\n",
-    "        \"Analyze and visualize data using appropriate tools\",\n",
-    "        \"Interpret data insights to inform decision-making\",\n",
-    "        \"Develop data storytelling skills to communicate findings\"\n",
+    "        \"View hidden files and folders\",\n",
+    "        \"View file extensions\",\n",
+    "        \"Create a new GitHub project repository\",\n",
+    "        \"Clone a project repository down to their machine\",\n",
+    "        \"Open their project repository folder in VS Code\",\n",
+    "        \"Manage a project virtual environment (create, activate, install dependencies)\",\n",
+    "        \"Employ common project files (e.g. README.md, .gitignore, requirements.txt)\",\n",
+    "        \"Create and execute new Python scripts\",\n",
+    "        \"Create and execute new Jupyter notebooks using Python and Markdown\",\n",
+    "        \"Use git pull and git add / commit / push to keep a project synchronized between their machine and GitHub repository\"\n",
     "    ]\n",
     "}\n",
     "\n",
@@ -297,9 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 3 spells: ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
     "player_character = {'name': 'Kitab',\n",
     "                   'class': [('Cleric: Knowledge', 7)],\n",
@@ -308,7 +321,10 @@
     "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
     "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
     "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "                   }\n",
+    "\n",
+    "# Print the list of level 3 spells\n",
+    "print(\"Level 3 spells:\", player_character['spells']['level 3'])"
    ]
   },
   {
@@ -320,11 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique values: 12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "# List of values\n",
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "\n",
+    "# Convert the list to a set to remove duplicates\n",
+    "unique_values = set(values)\n",
+    "\n",
+    "# Print the number of unique values\n",
+    "print(\"Number of unique values:\", len(unique_values))"
    ]
   },
   {
