--- a/S575959.ipynb
+++ b/S575959.ipynb
@@ -54,6 +54,24 @@
     "    # Print right-side stars\n",
     "    print('*' * i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook S575959.ipynb to html\n",
+      "[NbConvertApp] Writing 273282 bytes to S575959.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html S575959.ipynb\n"
+   ]
   }
  ],
  "metadata": {
